@@ -140,6 +140,7 @@
 80. If we can access a CUE file, but fail to parse it, then do not add CUE to
     album's track list.
 81. Show MTP track list progress in percentages.
+82. Fix memleak with MTP devices.
 
 1.1.3
 -----
